Feature: gatsby-plugin-google-adsense

--- a/src/styles/_markdown-style.scss
+++ b/src/styles/_markdown-style.scss
@@ -1026,6 +1026,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  font-size: 10px;
   width: 340px;
   position: fixed;
   top: 75px;
