--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,9 @@
 
   body {
     background-color: var(--background-color);
+    color: var(--primary-text-color);
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
   }
 
   a {
@@ -69,9 +72,45 @@
 
   button,
   a {
-    outline: none !important;
-    border: none !important;
+    outline: none;
   }
+}
+
+::selection {
+  color: #fff;
+  background-color: #2f3f5a;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.layout-toc {
+  font-size: 13px;
+  line-height: 1.6;
+}
+
+.layout-toc ul {
+  list-style: none;
+  margin: 0;
+  padding-left: 12px;
+}
+
+.layout-toc li {
+  margin: 6px 0;
+}
+
+.layout-toc a {
+  color: var(--secondary-text-color);
+}
+
+.layout-toc a:hover {
+  color: var(--primary-text-color);
 }
 
 /* Markdown heading anchor links */
